1998-11-27  Mark A. Wicks  <mwicks@odo.kettering.edu>

	* Changed source tree to fit with texk distribution.

	* Added cmyk color support.
	
1998-11-26  Mark A. Wicks  <mwicks@odo.kettering.edu>

	* Fixed a bug in the outline/bookmark tree structure.
	
	* Changed the \special parser so it would recognize numbers
          that don't start with a digit.

        * Added macro support for Graphics and hyperref.
   
        * Several minor changes.