@@ -23,6 +23,9 @@ or if you prefer FTP:
 	does not work for PDF files that store the page
 	contents in several segments in an array.
 	
+      - Re-encodig support for PostScript fonts.  dvipdfm
+        uses the same .enc files as dvips.  The mapfile is different.
+	
       - Support for arbitrary linear graphics transformations.
         Any material on the page can be scaled and rotated.
 
@@ -35,14 +38,16 @@ or if you prefer FTP:
 
    Limitations (at present):
 
-      - No Virtual font or encoding support in this version. This
-	means that the "times", "palatino", and similar packages 
-	that require virtual fonts will not work correctly.
-        Virtual font support and encoding support is in progress
-        and this should be supported soon. 
+      - No Virtual font support in this version.  You can use
+	packages such as "times", "palatino", etc. if
+	you either (1) use a re-encoding instead of a vf,
+	or (2) run your dvi file through dvicopy to
+	expand the virtual fonts. Virtual font support is in
+	progress and should be supported soon. 
 
       - No output PDF stream compression.  Input PDF files
         may be contain compressed streams, however.
+	Certain input streams cannot be embedded.
         Flate compression of PDF output streams will be
 	supported in a future version.
 	
